07.lnmp_demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-lnmp
  namespace: lnmp

spec:
  rules:
    - host: lnmp.linux.com     #测试域名
      http:
        paths:
          - backend:
              serviceName: wordpress-nginx
              servicePort: 80
